--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "website",
   "version": "0.1.0",
-  "homepage": "https://sunwooha.github.io",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.30",
@@ -20,9 +19,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "build": "rm -rf docs && react-scripts build && mv build docs && git add docs && git commit -m 'updated build' && git push",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -40,9 +37,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "gh-pages": "^5.0.0",
-    "webpack-cli": "^5.0.2"
   }
 }
